@@ -14,9 +14,9 @@ mod_description=Turn Minecraft into a Hack and Slash Looter!
 mod_icon=logo.png
 
 # Forge / Minecraft
-version_forge=1.14.4-28.1.107
+version_forge=1.14.4-28.1.109
 version_minecraft=1.14.4
-version_mcp=20191125-1.14.3
+version_mcp=20191231-1.14.3
 
 # Mod Dependencies
 version_curios=FORGE-1.14.4-1.0.6
