@@ -20,3 +20,6 @@ public net.minecraft.client.gui.screen.inventory.ContainerScreen func_195360_a(D
 public net.minecraft.client.gui.screen.inventory.ContainerScreen func_146982_a(Lnet/minecraft/item/ItemStack;IILjava/lang/String;)V # drawItemStack
 public net.minecraft.client.gui.screen.inventory.ContainerScreen func_146977_a(Lnet/minecraft/inventory/container/Slot;)V # drawSlot
 public net.minecraft.entity.projectile.TridentEntity field_203054_h # thrownStack
+public net.minecraft.entity.player.ServerPlayerEntity field_71144_ck # lastExperience
+public net.minecraft.entity.player.ServerPlayerEntity field_71149_ch # lastHealth
+public net.minecraft.entity.player.ServerPlayerEntity field_71146_ci # lastFoodLevel
